# Algoritmos-e-programa-o-estruturada

./: CMakeLists.txt  README.md  torre_De_hanoi  torre_De_hanoi.c
1-Primeira lista/10/: ex10.c
1-Primeira lista/11/: ex11.c
1-Primeira lista/12/: ex12.c
1-Primeira lista/13/: ex13.c
1-Primeira lista/2/: ex2.c
1-Primeira lista/3/: ex3.c
1-Primeira lista/4/: ex4.c
1-Primeira lista/5/: ex5.c
1-Primeira lista/6/: ex6  ex6.c
1-Primeira lista/9/: ex9.c
2-Segunda lista/1/ex1.dSYM/Contents/Resources/Relocations/x86_64/: ex1.yml
2-Segunda lista/3/: ex3
2-Segunda lista/4/: ex4.c  tempCodeRunnerFile.c
3-Terceira lista/8/: ex8.c
4-Quarta lista/10/: ex10  ex10.c
4-Quarta lista/2/: ex2  ex2.c
4-Quarta lista/3/: ex3  ex3.c
4-Quarta lista/4/: ex4  ex4.c
4-Quarta lista/5/: ex5  ex5.c
4-Quarta lista/6/: ex6  ex6.c
4-Quarta lista/7/: ex7  ex7.c
4-Quarta lista/8/: ex8  ex8.c
4-Quarta lista/9/: ex9  ex9.c
5-Quinta Lista/1/: ex1.c
5-Quinta Lista/2/: ex2.c
5-Quinta Lista/3/: ex3.c
5-Quinta Lista/4/: ex4.c
5-Quinta Lista/5/: ex5.c
5-Quinta Lista/6/: ex6.c
6-Sexta Lista/1/: ex1.c
6-Sexta Lista/10/: ex10.c
6-Sexta Lista/2/: ex2.c
6-Sexta Lista/3/: ex3.c
6-Sexta Lista/4/: ex4.c
6-Sexta Lista/5/: ex5.c
6-Sexta Lista/6/: ex6.c
6-Sexta Lista/7/: ex7.c
6-Sexta Lista/8/: ex8.c
6-Sexta Lista/9/: ex9.c
Primeira lista/1/: ex1  ex1.c
Primeira lista/2/: ex2
Primeira lista/3/: ex3
Primeira lista/4/: ex4.c
Primeira lista/5/: ex5.c
Primeira lista/6/: ex6.c
Primeira lista/7/: ex7.c
Primeira lista/8/: ex8.c
Segunda lista/1/: ex1  ex1.c
Segunda lista/1/ex1.dSYM/Contents/Resources/DWARF/: ex1
Segunda lista/2/: ex2  ex2.c
Segunda lista/3/: ex3.c
Segunda lista/4/: ex4
Terceira lista/1/: ex1  ex1.c
Terceira lista/8/: ex8
Videoaulas/Ponteiros/: Ponteiros.c
Videoaulas/Structs/: Structs.c
